RESOLVED FIXED208440
In case an activating service worker is terminated, it should go to activated state
https://bugs.webkit.org/show_bug.cgi?id=208440
Summary In case an activating service worker is terminated, it should go to activated...
youenn fablet
Reported 2020-03-02 03:19:38 PST
In case an activating service worker is terminated, it should go to activated state, as per https://w3c.github.io/ServiceWorker/#activate
Attachments
Patch (3.20 KB, patch)
2020-03-02 03:24 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-03-02 03:19:55 PST
youenn fablet
Comment 2 2020-03-02 03:24:14 PST
youenn fablet
Comment 3 2020-03-03 06:17:08 PST
Ping review
WebKit Commit Bot
Comment 4 2020-03-05 10:42:10 PST
Comment on attachment 392126 [details] Patch Clearing flags on attachment: 392126 Committed r257929: <https://trac.webkit.org/changeset/257929>
WebKit Commit Bot
Comment 5 2020-03-05 10:42:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.