In case an activating service worker is terminated, it should go to activated state https://bugs.webkit.org/show_bug.cgi?id=208440 <rdar://problem/59742332>

Reviewed by Chris Dumez.

Source/WebCore:

Covered by updated test.

* workers/service/server/SWServerWorker.cpp:
(WebCore::SWServerWorker::setState):
As per spec, if an activated service worker is terminated or its activate event is timing out,
we should move it to activate state.

LayoutTests:

* http/wpt/service-workers/service-worker-spinning-activate.https.html:


Canonical link: https://commits.webkit.org/221560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257929 268f45cc-cd09-0410-ab3c-d52691b4dbfc